some minor updates

--- a/index.html
+++ b/index.html
@@ -112,29 +112,13 @@
         <div class="hello-im-parth fade-in">
           <h2 class="big-text-hello">Hello!</h2>
           <h2 class="big-text-im-parth">I'm Parth.</h2>
-          <h2 class="big-text-cs-student">A second year Computer Science student at the University of Toronto.</h2>
+          <h2 class="big-text-cs-student">A third year Computer Science student at the University of Toronto.</h2>
         </div>
         <canvas class="abs" width="100%" height="100%"></canvas>
         <script src="bg.js"></script>
       </section>
     </main>
 
-
-
-    <!--the intro page, the 3 lines of qualites-->
-    <!--<div class="intro">
-      <div class="intro-text">
-        <h1 class="hide">
-          <span class="text-hide">Innovative,</span>
-        </h1>
-        <h1 class="hide">
-          <span class="text-hide">Creative and a</span>
-        </h1>
-        <h1 class="hide">
-          <span class="text-hide">Critical Thinker.</span>
-        </h1>
-      </div>
-    </div>-->
 
     <!--the slider, that blue page that goes by over the black stuff.-->
     <div class="slider"></div>
@@ -143,6 +127,30 @@
     <section class="software-and-tools" id="software">
       <h2 class="sub-headings slide-in">Software and Tools</h2>
       <div class="wrapper01">
+        <div class="experience fade-in">
+          <div class="experience-logo">
+            <img src="img/vuejs.png" alt="">
+          </div>
+          <div class="experience-text">
+            Vue.js
+          </div>
+        </div>
+        <div class="experience fade-in">
+          <div class="experience-logo">
+            <img src="img/javascript.png" alt="">
+          </div>
+          <div class="experience-text">
+            JavaScript
+          </div>
+        </div>
+        <div class="experience fade-in">
+          <div class="experience-logo">
+            <img src="img/css.png" alt="">
+          </div>
+          <div class="experience-text">
+            CSS
+          </div>
+        </div>
         <div class="experience fade-in">
           <div class="experience-logo">
             <img src="img/python.png" alt="">
@@ -169,6 +177,14 @@
         </div>
         <div class="experience fade-in">
           <div class="experience-logo">
+            <img src="img/tizen-web-framework.png" alt="">
+          </div>
+          <div class="experience-text">
+            Tizen Web App
+          </div>
+        </div>
+        <div class="experience fade-in">
+          <div class="experience-logo">
             <img src="img/scripting.png" alt="">
           </div>
           <div class="experience-text">
@@ -189,22 +205,6 @@
           </div>
           <div class="experience-text">
             Android Dev
-          </div>
-        </div>
-        <div class="experience fade-in">
-          <div class="experience-logo">
-            <img src="img/javascript.png" alt="">
-          </div>
-          <div class="experience-text">
-            JavaScript
-          </div>
-        </div>
-        <div class="experience fade-in">
-          <div class="experience-logo">
-            <img src="img/css.png" alt="">
-          </div>
-          <div class="experience-text">
-            CSS
           </div>
         </div>
         <div class="experience fade-in">
@@ -395,15 +395,15 @@
             </div>
           </div>
           <div class="project-item fade-in">
-            <a class="project-item-logo-and-text-github" href="https://github.com/parth-commits/portfolio-website" target="_blank">
+            <a class="project-item-logo-and-text-github" href="https://github.com/parth-commits/SB-test" target="_blank">
               <div class="project-item-logo">
                 <p class="project-item-github-text">View on GitHub</p>
-                <img class="project-item-image"src="img/website-logo.png" alt="">
+                <img class="project-item-image"src="img/sb-app.png" alt="">
                 <img class="githubimage" src="img/github.png" alt="githubimage">
               </div>
             </a>
             <div class="project-item-text">
-              Portfolio Website
+              Starbucks Rewards Watch App
             </div>
           </div>
           <div class="project-item fade-in">
@@ -420,7 +420,7 @@
           </div>
       </div>
       <div class="button-allprojects-holder">
-        <a class="button-allprojects" href="projects" target="_blank"> See all Projects</a>
+        <a class="button-allprojects" href="projects.html" target="_blank"> See all Projects</a>
       </div>
 
     </section>
@@ -439,17 +439,17 @@
           </label>
           <div class="timeline-item-content">
             <ul>
-              <li><p>Dean's List(cGPA: 3.97)</p></li>
-              <li>
+              <li><p>Dean's List(cGPA: 3.71)</p></li>
+              <!--<li>
                 <p>Current courses:</p>
+              </li>-->
+              <li><p>Past Courses:</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Software Design (CSC207)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Theory of Computation (CSC236)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Probability and Statistics with Computer Applications (STA247)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Software Tools and Systems Programming (CSC209)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Data Structures and Analysis (CSC263)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Computer Organization(CSC258)</p>
-              </li>
-              <li><p>Past Courses:</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Intro to Computer Programming (CSC108)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Statistical Reasoning (STA130)</p>
                 <p>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;- Introduction to Computer Science (CSC148)</p>
