fixed timeline, now projects left to do

--- a/index.html
+++ b/index.html
@@ -314,6 +314,39 @@
         <!-- This is the single object that u need to add to add another experience-->
         <div class="timeline-item fade-in">
           <label class="timeline-item-title">
+            <p class="timeline-item-title-title">Software Development Engineer Intern, ModiFace - a L’Oréal Company</p>
+            <p class="timeline-item-title-date">May 2021 - Present</p>
+          </label>
+          <div class="timeline-item-content">
+            <ul>
+              <li><p>Actively involved in the development and maintenance of the core SDK, expanding it with features to provide a better User Experience.</p></li>
+              <li><p>Solved critical errors for multiple products (e.g., Virtual Try On SDK) by creating automated tests, fixing bugs, and improving existing code base with enhanced programming principles which provided an error-free experience to millions of customers of top makeup brands worldwide including but not limited to L’Oréal, Maybelline and NYX. </p></li>
+              <li><p>Ardent team player, emphasizing frequent code reviews and peer programming sessions.</p></li>
+              <li><p>Experience with JavaScript, Vue.js framework and Python.</p></li>
+            </ul>
+          </div>
+        </div>
+        <div class="timeline-item fade-in">
+          <label class="timeline-item-title">
+            <p class="timeline-item-title-title">Private Watch App Developer, Samsung Galaxy Store</p>
+            <p class="timeline-item-title-date">May 2021 - Present</p>
+          </label>
+          <div class="timeline-item-content">
+            <ul>
+              <li><p>Followed the Software Development Process model to create and maintain multiple apps.</p></li>
+              <li><p>Created multiple apps that aid in making the user’s daily life activities more convenient. 
+                For example, made a <a href="https://galaxy.store/starbucks" target="_blank"> <b> Starbucks Rewards
+                   App</b></a> - with currently over 1000 users - which allows them to scan their Rewards Card right
+                    from their watch, so they don’t have to pull out their phone at the Café. Then made a follow up 
+                    app - <a href="https://galaxy.store/sqadoxczl"> <b> SB Scan + Pay</b></a> - which allows users 
+                    to use their Starbucks Card to Pay for their beverage all the while getting rewards, right from 
+                    their watch!</p></li>
+              <li><p>Other interesting apps include: <a href="https://galaxy.store/tims1" target="_blank"><b>Tims Rewards</b></a>, <a href="https://galaxy.store/tic1" target="_blank"><b>TicTacToe</b></a>, <a href="https://galaxy.store/sudoku3" target="_blank"><b>Sudoku</b></a>.</p></li>
+            </ul>
+          </div>
+        </div>
+        <div class="timeline-item fade-in">
+          <label class="timeline-item-title">
             <p class="timeline-item-title-title">Lead Instructor, UCMAS</p>
             <p class="timeline-item-title-date">March - June 2019</p>
           </label>
@@ -361,18 +394,7 @@
               <li><p>With excellent communication skills, built professional relationships with students and staff.</p></li>
             </ul>
           </div>
-        </div>
-        <div class="timeline-item fade-in">
-          <label class="timeline-item-title">
-            <p class="timeline-item-title-title">NACI Math Contest</p>
-            <p class="timeline-item-title-date">March 2018 - March 2019</p>
-          </label>
-          <div class="timeline-item-content">
-            <ul>
-              <li><p>Constructed fascinating and complex questions for the North Albion Math Contest for students to write and enjoy</p></li>
-            </ul>
-          </div>
-        </div>
+        </div>gi
       </div>
     </section>
 
