--- a/index.html
+++ b/index.html
@@ -336,7 +336,7 @@
               <li><p>Followed the Software Development Process model to create and maintain multiple apps.</p></li>
               <li><p>Created multiple apps that aid in making the user’s daily life activities more convenient. 
                 For example, made a <a href="https://galaxy.store/starbucks" target="_blank"> <b> Starbucks Rewards
-                   App</b></a> - with currently over 1000 users - which allows them to scan their Rewards Card right
+                   App</b></a> - with currently over <b class="confetti-items">2000</b> users - which allows them to scan their Rewards Card right
                     from their watch, so they don’t have to pull out their phone at the Café. Then made a follow up 
                     app - <a href="https://galaxy.store/sqadoxczl"> <b> SB Scan + Pay</b></a> - which allows users 
                     to use their Starbucks Card to Pay for their beverage all the while getting rewards, right from 
@@ -600,7 +600,8 @@
       </ul>
     </footer>
 
-
+    <!--The script to run confetti-->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <!--the timeline library to make the intro effects-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <!--the script that runs the entire system.-->
