fixed link to new site. bug fix

--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
               <li><p>With excellent communication skills, built professional relationships with students and staff.</p></li>
             </ul>
           </div>
-        </div>gi
+        </div>
       </div>
     </section>
 
