--- a/projects.html
+++ b/projects.html
@@ -105,7 +105,7 @@
             <p class="timeline-item-title-date">December 2020</p>
           </label>
           <div class="timeline-item-content1">
-            <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/portfolio-website" target="_blank">
+            <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/parth-commits.github.io" target="_blank">
               <div class="project-item-main-logo">
                 <p class="project-item-github-text">View on GitHub</p>
                 <img class="project-item-image"src="img/website-logo.png" alt="">
