divided the projects into seperate pages

--- a/index.html
+++ b/index.html
@@ -405,46 +405,42 @@
       <h2 class="sub-headings slide-in">Projects</h2>
       <div class="wrapper03">
           <div class="project-item fade-in">
-            <a class="project-item-logo-and-text-github" href="https://github.com/parth-commits/Coronavirus" target="_blank">
+            <a class="project-item-logo-and-text-github" href="wearableProjects.html" target="_blank">
               <div class="project-item-logo">
-                <p class="project-item-github-text">View on GitHub</p>
-                <img class="project-item-image"src="img/covidlivedata.png" alt="">
-                <img class="githubimage" src="img/github.png" alt="githubimage">
+                <p class="project-item-github-text">Click to View</p>
+                <img class="project-item-image"src="img/wearable-icon.png" alt="">
+                <img class="githubimage" src="img/open-icon.png" alt="githubimage">
               </div>
             </a>
             <div class="project-item-text">
-              COVID-19 App
+              Wearable Projects
             </div>
           </div>
           <div class="project-item fade-in">
-            <a class="project-item-logo-and-text-github" href="https://github.com/parth-commits/SB-test" target="_blank">
+            <a class="project-item-logo-and-text-github" href="mobileProjects.html" target="_blank">
               <div class="project-item-logo">
-                <p class="project-item-github-text">View on GitHub</p>
-                <img class="project-item-image"src="img/sb-app.png" alt="">
-                <img class="githubimage" src="img/github.png" alt="githubimage">
+                <p class="project-item-github-text">Click to View</p>
+                <img class="project-item-image"src="img/mobile-icon.png" alt="">
+                <img class="githubimage" src="img/open-icon.png" alt="githubimage">
               </div>
             </a>
             <div class="project-item-text">
-              Starbucks Rewards Watch App
+              Mobile Projects
             </div>
           </div>
           <div class="project-item fade-in">
-            <a class="project-item-logo-and-text-github" href="https://github.com/parth-commits/conference-system" target="_blank">
+            <a class="project-item-logo-and-text-github" href="otherProjects.html" target="_blank">
               <div class="project-item-logo">
-                <p class="project-item-github-text">View on GitHub</p>
-                <img class="project-item-image"src="img/clean-architecture-logo.png" alt="">
-                <img class="githubimage" src="img/github.png" alt="githubimage">
+                <p class="project-item-github-text">Click to View</p>
+                <img class="project-item-image"src="img/pc-icon.png" alt="">
+                <img class="githubimage" src="img/open-icon.png" alt="githubimage">
               </div>
             </a>
             <div class="project-item-text">
-              Conference System
+              Other Projects
             </div>
           </div>
       </div>
-      <div class="button-allprojects-holder">
-        <a class="button-allprojects" href="projects.html" target="_blank"> See all Projects</a>
-      </div>
-
     </section>
 
     <!--the education section of the website, has my education info.
