--- a/wearableProjects.html
+++ b/wearableProjects.html
@@ -75,7 +75,7 @@
         <div class="project-main-site-item fade-in">
             <label class="project-item-title">
               <p class="timeline-item-title-title">Starbucks Rewards Watch App</p>
-              <p class="timeline-item-title-date">July 2021</p>
+              <p class="timeline-item-title-date">Summer 2021</p>
             </label>
             <div class="timeline-item-content1">
               <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/SB-test" target="_blank">
@@ -104,7 +104,7 @@
           <div class="project-main-site-item fade-in">
               <label class="project-item-title">
                 <p class="timeline-item-title-title">Starbucks Scan + Pay Watch App</p>
-                <p class="timeline-item-title-date">July 2021</p>
+                <p class="timeline-item-title-date">Summer 2021</p>
               </label>
               <div class="timeline-item-content1">
                 <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/SB-Scan-and-Pay" target="_blank">
@@ -128,6 +128,35 @@
                 <img src="img/youtube.png"  alt="fancy youtube logo">
               </a>-->
             </div>
+
+            <!--this is an individual item, duplicate the following to add a new project item.-->
+            <div class="project-main-site-item fade-in">
+                <label class="project-item-title">
+                  <p class="timeline-item-title-title">Tims Rewards Watch App</p>
+                  <p class="timeline-item-title-date">Summer 2021</p>
+                </label>
+                <div class="timeline-item-content1">
+                  <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/TH-test" target="_blank">
+                    <div class="project-item-main-logo">
+                      <p class="project-item-github-text">View on GitHub</p>
+                      <img class="project-item-image"src="img/timsrewards-icon.png" alt="">
+                      <img class="githubimage" src="img/github.png" alt="githubimage">
+                    </div>
+                  </a>
+                </div>
+                <ul class="project-item-main-description">
+                    <li>This is a watch app users can use to scan at any Tim Hortons location to get and redeem points. </li>
+                    <li>The goal of this project was to create a clean UI for users to use all the while making it feel as if it was made by Tim Hortons itself! <b> (Disclaimer: It's not!)</b></li>
+                    <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
+                    <li>You may visit the Galaxy Store link <a href="https://galaxy.store/tims1" target="_blank"> <b> here</b></a>.</li>
+                    <li>You can also see a demo <a href="https://parth-commits.github.io/TH-test/" target="_blank"> <b> here</b></a>.</li>
+                  </ul>
+                <!-- this project doesnt have a youtube link yet!
+                <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
+                  <p>View a demo on YouTube</p>
+                  <img src="img/youtube.png"  alt="fancy youtube logo">
+                </a>-->
+              </div>
 
       </div>
     </section>
