added confetti to number of downloads

--- a/wearableProjects.html
+++ b/wearableProjects.html
@@ -90,6 +90,7 @@
               <li>This is a watch app users can use to scan at any Starbucks location to get and redeem Stars (points). </li>
               <li>The goal of this project was to create a clean UI for users to use all the while making it feel as if it was made by Starbucks itself! <b> (Disclaimer: It's not!)</b></li>
               <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
+              <li>Currently has over <b class="confetti-items">2000</b> downloads!</li>
               <li>You may visit the Galaxy Store link <a href="https://galaxy.store/starbucks" target="_blank"> <b> here</b></a>.</li>
               <li>You can also see a demo <a href="https://parth-commits.github.io/SB-test/" target="_blank"> <b> here</b></a>.</li>
             </ul>
@@ -184,6 +185,8 @@
     </footer>
 
 
+    <!--The script to run confetti-->
+    <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.4.0/dist/confetti.browser.min.js"></script>
     <!--the timeline library to make the intron effects-->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.5.1/gsap.min.js" integrity="sha512-IQLehpLoVS4fNzl7IfH8Iowfm5+RiMGtHykgZJl9AWMgqx0AmJ6cRWcB+GaGVtIsnC4voMfm8f2vwtY+6oPjpQ==" crossorigin="anonymous"></script>
     <!--the script that runs the entire system.-->
