added tic tac toe and sudoku watch apps

--- a/wearableProjects.html
+++ b/wearableProjects.html
@@ -92,7 +92,7 @@
               <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
               <li>Currently has over <b class="confetti-items">2000</b> downloads!</li>
               <li>You may visit the Galaxy Store link <a href="https://galaxy.store/starbucks" target="_blank"> <b> here</b></a>.</li>
-              <li>You can also see a demo <a href="https://parth-commits.github.io/SB-test/" target="_blank"> <b> here</b></a>.</li>
+              <li>You can also try a demo <a href="https://parth-commits.github.io/SB-test/" target="_blank"> <b> here</b></a>.</li>
             </ul>
             <!-- this project doesnt have a youtube link yet!
             <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
@@ -121,7 +121,7 @@
                 <li>The goal of this project was to create a clean UI for users to use all the while making it feel as if it was made by Starbucks itself! <b> (Disclaimer: It's not!)</b></li>
                 <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
                 <li>You may visit the Galaxy Store link <a href="https://galaxy.store/sqadoxczl" target="_blank"> <b> here</b></a>.</li>
-                <li>You can also see a demo <a href="https://parth-commits.github.io/SB-Scan-and-Pay/" target="_blank"> <b> here</b></a>.</li>
+                <li>You can also try a demo <a href="https://parth-commits.github.io/SB-Scan-and-Pay/" target="_blank"> <b> here</b></a>.</li>
               </ul>
               <!-- this project doesnt have a youtube link yet!
               <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
@@ -149,8 +149,9 @@
                     <li>This is a watch app users can use to scan at any Tim Hortons location to get and redeem points. </li>
                     <li>The goal of this project was to create a clean UI for users to use all the while making it feel as if it was made by Tim Hortons itself! <b> (Disclaimer: It's not!)</b></li>
                     <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
+                    <li>Currently has over <b class="confetti-items">200</b> downloads!</li>
                     <li>You may visit the Galaxy Store link <a href="https://galaxy.store/tims1" target="_blank"> <b> here</b></a>.</li>
-                    <li>You can also see a demo <a href="https://parth-commits.github.io/TH-test/" target="_blank"> <b> here</b></a>.</li>
+                    <li>You can also try a demo <a href="https://parth-commits.github.io/TH-test/" target="_blank"> <b> here</b></a>.</li>
                   </ul>
                 <!-- this project doesnt have a youtube link yet!
                 <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
@@ -159,6 +160,65 @@
                 </a>-->
               </div>
 
+            <!--this is an individual item, duplicate the following to add a new project item.-->
+            <div class="project-main-site-item fade-in">
+                <label class="project-item-title">
+                  <p class="timeline-item-title-title">Sudoku Watch App</p>
+                  <p class="timeline-item-title-date">Summer 2021</p>
+                </label>
+                <div class="timeline-item-content1">
+                  <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/sudoku-watch-app" target="_blank">
+                    <div class="project-item-main-logo">
+                      <p class="project-item-github-text">View on GitHub</p>
+                      <img class="project-item-image"src="img/sudoku-watch-app-icon.png" alt="">
+                      <img class="githubimage" src="img/github.png" alt="githubimage">
+                    </div>
+                  </a>
+                </div>
+                <ul class="project-item-main-description">
+                    <li>This is a watch app users can use to play Sudoku. There are 3 modes - Easy, Medium and Hard. </li>
+                    <li>The goal of this project was to create a clean UI for users to enjoy playing Sudoku.</li>
+                    <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
+                    <li>You may visit the Galaxy Store link <a href="https://galaxy.store/sudoku3" target="_blank"> <b> here</b></a>.</li>
+                    <li>You can also try a demo <a href="https://parth-commits.github.io/sudoku-watch-app/" target="_blank"> <b> here</b></a>.</li>
+                  </ul>
+                <!-- this project doesnt have a youtube link yet!
+                <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
+                  <p>View a demo on YouTube</p>
+                  <img src="img/youtube.png"  alt="fancy youtube logo">
+                </a>-->
+              </div>
+
+              <!--this is an individual item, duplicate the following to add a new project item.-->
+            <div class="project-main-site-item fade-in">
+                <label class="project-item-title">
+                  <p class="timeline-item-title-title">Tic Tac Toe Watch App</p>
+                  <p class="timeline-item-title-date">Summer 2021</p>
+                </label>
+                <div class="timeline-item-content1">
+                  <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/TicTacToe-watch-app" target="_blank">
+                    <div class="project-item-main-logo">
+                      <p class="project-item-github-text">View on GitHub</p>
+                      <img class="project-item-image"src="img/tictactoe-watch-app-icon.png" alt="">
+                      <img class="githubimage" src="img/github.png" alt="githubimage">
+                    </div>
+                  </a>
+                </div>
+                <ul class="project-item-main-description">
+                    <li>This is a watch app users can use to play Tic Tac Toe. </li>
+                    <li>The goal of this project was to create a clean UI for users to enjoy playing Tic Tac Toe with a friend when they are bored.</li>
+                    <li>Key feature included is board rotating so your friend gets the same view as you while playing without you having to perform gymnastics with your hands.</li>
+                    <li>This project was coded in basic HTML, CSS and Javascript with the help of the Tizen web framework.</li>
+                    <li>Currently has over <b class="confetti-items">200</b> downloads!</li>
+                    <li>You may visit the Galaxy Store link <a href="https://galaxy.store/tic1" target="_blank"> <b> here</b></a>.</li>
+                    <li>You can also try a demo <a href="https://parth-commits.github.io/TicTacToe-watch-app/" target="_blank"> <b> here</b></a>.</li>
+                  </ul>
+                <!-- this project doesnt have a youtube link yet!
+                <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
+                  <p>View a demo on YouTube</p>
+                  <img src="img/youtube.png"  alt="fancy youtube logo">
+                </a>-->
+              </div>
       </div>
     </section>
 
