--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
         <div class="hello-im-parth fade-in">
           <h2 class="big-text-hello">Hello!</h2>
           <h2 class="big-text-im-parth">I'm Parth.</h2>
-          <h2 class="big-text-cs-student">A third year Computer Science student at the University of Toronto.</h2>
+          <h2 class="big-text-cs-student">A Third Year Computer Science Student at the University of Toronto.</h2>
         </div>
         <canvas class="abs" width="100%" height="100%"></canvas>
         <script src="bg.js"></script>
