fixed description of portfolio site

--- a/otherProjects.html
+++ b/otherProjects.html
@@ -90,7 +90,10 @@
             <li>The goal of this project was to make a light interactive and responsive website on which I can display my portfolio.</li>
             <li>Previous to this, I was using wix to design and host my website, and it was very laggy, and had alot of bugs, so I decided I needed to learn some web development, and made my own website.</li>
             <li>This website was programmed using HTML, CSS and JavaScript</li>
-            <li>Next steps: This website is currently optimised for computer users only, so my next step is to optimize and reformat for mobile and tablet devices. Note: This website is still fairly optimized for mobile devices but I plan to later on further optimize this website to give the best experience to mobile viewers.</li>
+            <li>Next steps: This website is currently optimised for computer users only, so my next step is to optimize
+               and reformat for mobile and tablet devices. Note: This website is currently blocked off for mobile users
+               and mobile users are instead shown a message to open the website on a computer.
+                But I plan to later on further optimize this website to give the best experience to mobile viewers.</li>
           </ul>
           <!-- this project doesnt have a youtube link yet!
           <a class="youtube-popout-thing" href="https://youtube.com" target="_blank">
