updated image for website

--- a/otherProjects.html
+++ b/otherProjects.html
@@ -81,7 +81,7 @@
             <a class="project-item-main-logo-and-text-github" href="https://github.com/parth-commits/parth-commits.github.io" target="_blank">
               <div class="project-item-main-logo">
                 <p class="project-item-github-text">View on GitHub</p>
-                <img class="project-item-image"src="img/website-logo.png" alt="">
+                <img class="project-item-image"src="img/website-logo.svg" alt="">
                 <img class="githubimage" src="img/github.png" alt="githubimage">
               </div>
             </a>
