updated stats for watch apps

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                     to use their Starbucks Card to Pay for their beverage all the while getting rewards, right from 
                     their watch!</p></li>
               <li><p>Other interesting apps include: <a href="https://galaxy.store/tims1" target="_blank"><b>Tims Rewards</b></a>, <a href="https://galaxy.store/tic1" target="_blank"><b>TicTacToe</b></a>, <a href="https://galaxy.store/sudoku3" target="_blank"><b>Sudoku</b></a>.</p></li>
-              <li><p>Total Downloads from all apps: <b class="confetti-items">5000</b></p></li>
+              <li><p>Total Downloads from all apps: <b class="confetti-items">5000+ !!</b></p></li>
             </ul>
           </div>
         </div>
